# PyTorch-Python-Cpp

./: .gitignore  README.md
example-app/: CMakeLists.txt
pycpp/: CMakeLists.txt  build.sh  demo.cpp  demo.py
webots/controllers/pytorch_controller/: pytorch_controller.cpp
webots/controllers/torch_controller/: Makefile  torch_controller  torch_controller.cpp
webots/controllers/torch_controller/models/: model_cpp.pt  model_py.pt
webots/libraries/pytorch/: CMakeLists.txt  build.sh  demo.cpp  demo.hpp  demo_torch.hpp
webots/worlds/: .kheperaPytorch.wbproj  kheperaPytorch.wbt
